crates/panache-parser/tests/snapshots/yaml__yaml_suite_T26H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: T26H
input: "--- |\n \n  \n  literal\n   \n  \n  text\n\n # Comment\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
