crates/panache-parser/tests/snapshots/yaml__yaml_suite_T833.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: T833
input: "---\n{\n foo: 1\n bar: 2 }\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_FLOW_SEQUENCE_COMMA:expected comma between flow-mapping entries@18..19]
