crates/panache-parser/tests/snapshots/yaml__yaml_suite_TD5N.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: TD5N
input: "- item1\n- item2\ninvalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:stray content following a block sequence item at its indent level@16..23]
