crates/panache-parser/tests/snapshots/yaml__yaml_suite_TE2A.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: TE2A
input: "block mapping:\n key: value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
