crates/panache-parser/tests/snapshots/yaml__yaml_suite_TL85.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: TL85
input: "\"\n  foo \n \n  \t bar\n\n  baz\n\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
