crates/panache-parser/tests/snapshots/yaml__yaml_suite_U3C3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: U3C3
input: "%TAG !yaml! tag:yaml.org,2002:\n---\n!yaml!str \"foo\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
