crates/panache-parser/tests/snapshots/yaml__yaml_suite_U44R.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: U44R
input: "map:\n  key1: \"quoted1\"\n   key2: \"bad indentation\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:invalid plain mapping line@0..4]
