crates/panache-parser/tests/snapshots/yaml__yaml_suite_U99R.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: U99R
input: "- !!str, xxx\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_TAG_CHARACTER:invalid character in tag@7..8]
